| Summary: | ASTERISK-25647: bug of cel_radius.c: wrong point of ADD_VENDOR_CODE | ||||
| Reporter: | Aaron An (aaron) | Labels: | |||
| Date Opened: | 2015-12-25 02:16:20.000-0600 | Date Closed: | 2016-01-06 12:04:33.000-0600 | ||
| Priority: | Critical | Regression? | |||
| Status: | Closed/Complete | Components: | CEL/General | ||
| Versions: | SVN 13.6.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | #define ADD_VENDOR_CODE(x,y) (rc_avpair_add(rh, send, x, &y, strlen(y), VENDOR_CODE))
shoud change to: #define ADD_VENDOR_CODE(x,y) (rc_avpair_add(rh, send, x, y, strlen(y), VENDOR_CODE)) | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2015-12-25 02:16:22.816-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2015-12-28 09:45:05.377-0600 Thanks for the report, can you submit a patch to Gerrit? Once you've followed the Code Review process [1] and submitted your code to Gerrit [2] be sure to edit this JIRA issue and add the Gerrit review URL in the appropriate field. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review [2] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Aaron An (aaron) 2015-12-28 21:10:30.406-0600 hi, I am on the road to be follow the Code Review process and submit my patch. By: Rusty Newton (rnewton) 2015-12-29 09:32:50.630-0600 Cool. Once you get a license agreement validated you should be able to post the patch on this issue and then post it up to Gerrit as well. The wiki should guide you along. Thanks! By: Aaron An (aaron) 2016-01-04 05:44:25.947-0600 Hi, I have got a license agreement validated and git clone the project. It takes me a lot of time to study git and Gerrit, fortunately I successfull upload the patch. https://gerrit.asterisk.org/#/c/1901/ if there are any problems please tell me. | ||||